--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,11 @@
 	<name>design-patterns-spring</name>
 	<description>Practical Design Patterns with Java and Spring Boot.</description>
 
-
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>2021.0.6</spring-cloud.version>
-		<!--
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		-->
 	</properties>
 
 	<dependencies>
@@ -34,11 +31,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>3.0.4</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>4.0.1</version>
 		</dependency>
 		<!--
 		<dependency>
